# TapGameQ

./: .gitignore  build.gradle  gradle.properties  h origin remove  local.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/aidl/: build.gradle
app/common/: build.gradle
app/provider/: build.gradle
app/rish/: build.gradle
app/rish/src/main/cpp/: CMakeLists.txt  CMakeLists.txt.backup  adb_pairing.cpp  android.cpp  starter.cpp
app/server/: build.gradle
app/server-shared/: build.gradle
app/server-shared/src/main/java/android/app/: ActivityThread.java
app/server-shared/src/main/java/android/content/: AttributionSource.java  ContextHidden.java  IContentProvider.java
app/server-shared/src/main/java/android/ddm/: DdmHandleAppName.java
app/server-shared/src/main/java/android/os/: SELinux.java  SystemProperties.java  UserHandleHidden.java
app/server-shared/src/main/java/libcore/io/: Os.java
app/server-shared/src/main/java/rikka/hidden/compat/: ActivityManagerApis.java  PackageManagerApis.java  PermissionManagerApis.java
app/shared/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/tapgame/server/: IMyPermissionServer.aidl
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/android/app/: ActivityThread.java
app/src/main/java/android/content/: ContextHidden.java
app/src/main/java/android/ddm/: DdmHandleAppName.java
app/src/main/java/android/os/: IBinder.java  IInterface.java  SELinux.java  SystemProperties.java  UserHandleHidden.java
app/src/main/java/com/example/mytapgameserver/: MainActivity.java
app/src/main/java/com/example/mytapgameserver/server/: AbiUtil.java  ClientManager.java  ClientRecord.java  ConfigManager.java  ConfigPackageEntry.java  HandlerUtil.java  IRemoteProcess.java  IShizukuApplication.java  IShizukuService.java  IShizukuServiceConnection.java  MyPersistentServer.java  OsUtils.java  ParcelFileDescriptorUtil.java  (+8 more)
app/src/main/java/com/example/tapgame/: MainActivity.kt  TapGameApplication.kt
app/src/main/java/rikka/hidden/compat/: PackageManagerApis.java  PermissionManagerApis.java
app/src/main/java/rikka/rish/: RishConfig.java  RishService.java
app/src/main/res/drawable/: ic_debug.xml  ic_error.xml  ic_launcher_background.xml  ic_pair.xml
app/src/main/res/values/: strings.xml  themes.xml
app/starter/: build.gradle
(+47 files in other folders)
